# utils_native

./: .gitignore  README.en.md  README.md  README_zh.md  bundle.json  ohos.build
base/: BUILD.gn
base/include/: ashmem.h  common_errors.h  common_timer_errors.h  datetime_ex.h  directory_ex.h  errors.h  flat_obj.h  nocopyable.h  parcel.h  refbase.h  safe_block_queue.h  safe_map.h  securectype.h  sorted_vector.h  string_ex.h  thread_ex.h  thread_pool.h  timer.h
base/src/: ashmem.cpp  datetime_ex.cpp  directory_ex.cpp  event_demultiplexer.cpp  event_handler.cpp  event_handler.h  event_reactor.cpp  file_ex.cpp  parcel.cpp  refbase.cpp  rwlock.cpp  semaphore_ex.cpp  string_ex.cpp  thread_ex.cpp  thread_pool.cpp  timer.cpp  timer_event_handler.cpp  timer_event_handler.h  unicode_ex.cpp  utils_log.h
base/src/securec/: memmove_s.c  memset_s.c  secinput.h  securecutil.c  securecutil.h  strcat_s.c  vsnprintf_s_p.c
base/test/unittest/common/: BUILD.gn  utils_ashmem_test.cpp  utils_datetime_test.cpp  utils_directory_test.cpp  utils_file_test.cpp  utils_observer_test.cpp  utils_parcel_test.cpp  utils_refbase_test.cpp  utils_safe_block_queue_test.cpp  utils_safe_block_queue_tracking.cpp  utils_safe_map_test.cpp  utils_safe_queue_test.cpp  utils_securec_test.cpp  utils_semaphore_test.cpp  utils_singleton_test.cpp  utils_sorted_vector_test.cpp  utils_string_test.cpp  utils_thread_pool_test.cpp  utils_thread_test.cpp  utils_timer_test.cpp  (+1 more)
ndk_libraries_config/: BUILD.gn
ndk_libraries_config/bit32/: public.libraries-z.txt
ndk_libraries_config/bit64/: public.libraries-z.txt
