# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_prebuilt_etc("ndk_libs_config") {
  if (current_cpu == "arm") {
    source = "bit32/public.libraries-z.txt"
  } else if (current_cpu == "arm64" || current_cpu == "amd64" ||
             current_cpu == "x64" || current_cpu == "x86_64") {
    source = "bit64/public.libraries-z.txt"
  }
  subsystem_name = "utils"
  relative_install_dir = ""
  part_name = "utils_base"
}
